v2.0/markdown/asct-b/blood-vasculature-organ-crosswalk.md
# Blood Vasculature Organ Crosswalk, v1.1

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts. This table provides a crosswalk from vessels in the blood vasculature ASCT+B table to anatomical structures in other organ ASCT+B tables. The Relationship column indicates whether the vessel is “part_of”, “overlaps”, “supplies”, “drains”, “directly_supplies_drains”, “located_in”, or “connected_to” the anatomical structure in the BodySubPart column.

A vessel can relate to more than one anatomical structure; and, those relationships can occur in a particular order. For example, the vessel can pass through several structures along its length. The BodyPartSequence column indicates the sequence of those structures, from the proximal to distal end of the vessel. 

The BodySubPart structure is contained within the anatomical structure listed in the BodyPart column. The BodyPart is typically an organ or organ system. The FTU column indicates if the vessel is part of a functional tissue unit (the smallest tissue organization that performs a unique physiologic function in an organ). The angiosome column indicates if the vessel is associated with an angiosome (a region of muscle, bone, and skin supplied by a main artery).

IDs are provided for the Vessel, BodySubPart, BodySubPartSequence, BodyPart, FTU, and Angiosome columns to enable linkage to other datasets and ontologies.


| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Griffin Weber; Katherine S Gustilo |
| **Creator ORCID(s):** | [0000-0002-2597-881X](https://orcid.org/0000-0002-2597-881X); [0000-0002-5574-4272](https://orcid.org/0000-0002-5574-4272) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Sanjay Jain; M. Todd Valerius; Gloria Pryhuber; Martha Campbell-Thompson |
| **Reviewers ORCID(s):** |[0000-0003-2804-127X](https://orcid.org/0000-0003-2804-127X); [0000-0001-8143-9231](https://orcid.org/0000-0001-8143-9231); [0000-0002-9185-3994](https://orcid.org/0000-0002-9185-3994);[0000-0001-6878-1235](https://orcid.org/0000-0001-6878-1235)|
| **Creation Date:** | 2023-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD033756 and OT2OD026671 |
| **HuBMAP ID:** | HBM525.KFGV.228 |
| **Data Table:** | [Blood Vasculature Organ Crosswalk,v1.1](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/blood-vasculature-organ-crosswalk.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM525.KFGV.228](https://doi.org/10.48539/HBM525.KFGV.228) |
| **How to Cite This Data Table:** |  Griffin Weber; Katherine S Gustilo. Blood Vasculature Organ Crosswalk,v1.1 https://doi.org/10.48539/HBM525.KFGV.228, Accessed on December 15, 2023. |
| **How to Cite Overall:** | Boppana, Avinash, Sujin Lee, Rajeev Malhotra, Marc Halushka, Katherine S. Gustilo, Ellen M. Quardokus, Bruce W. Herr, Katy Börner, and Griffin M. Weber. 2023. “Anatomical Structures, Cell Types, and Biomarkers of the Healthy Human Blood Vasculature.” Scientific Data 10 (1): 452. https://doi.org/10.1038/s41597-023-02018-0.|
